fixed logo alignment on mobile

--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -1,170 +1,171 @@
 .home-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--background-color);
+  box-sizing: border-box;
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.home-text {
+  position: absolute;
+  top: 400px;
+  right: 80px;
+  text-align: right;
+}
+
+.home-text p {
+  font-weight: 100;
+  font-size: 2rem;
+  color: var(--primary-text-color);
+  max-width: 40vw;
+}
+
+.tagline {
+  font-weight: 400;
+  color: var(--foreground-color);
+}
+
+.bottom-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 80px;
+}
+
+.home-logo-container {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.home-logo-container .home-logo {
+  display: none;
+}
+
+/* Mostra il logo chiaro in modalità light */
+body[data-theme="light"] .home-logo-container .home-logo.light-logo {
+  display: block;
+}
+
+/* Mostra il logo scuro in modalità dark */
+body[data-theme="dark"] .home-logo-container .home-logo.dark-logo {
+  display: block;
+}
+
+.home-logo {
+  max-width: 50vw;
+  max-height: 30vh;
+  margin-left: 80px;
+}
+
+.scroll-hint {
+  font-size: 1.2rem;
+  color: var(--primary-text-color);
+  font-weight: 100;
+  letter-spacing: 0.1em;
+  white-space: nowrap;
+  transform: rotate(-90deg);
+  pointer-events: none;
+  position: relative;
+  bottom: 88px;
+  right: -8px;
+}
+
+.scroll-arrow {
+  display: inline-block;
+  font-weight: 900;
+  color: var(--foreground-color);
+  margin-left: 10px;
+  font-size: 1.5rem;
+  animation: scrollArrowAnimation 1.5s infinite ease-in-out;
+}
+
+@keyframes scrollArrowAnimation {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+}
+
+.stripes-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 55%;
+  height: 100%;
+  display: flex;
+  pointer-events: none;
+  justify-content: flex-end;
+  z-index: 1000;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+.stripe {
+  flex: 1;
+  height: 100%;
+  background-color: rgb(238, 238, 238);
+  transform: scaleX(0);
+  margin-left: -2px;
+}
+
+@media screen and (max-width: 768px) {
+  .home-text p {
+    font-size: 1.2em;
+    line-height: 1.1;
+    text-align: left !important;
+    max-width: 100vw !important;
+  }
+
+  .home-text {
+    top: 200px;
+    left: 10%;
+  }
+
+  .bottom-section {
+    position: absolute;
+    bottom: 15vh;
+    left: 0; /* Posiziona il contenitore all'inizio dello schermo */
+    width: 100%; /* Occupa l'intera larghezza */
+    padding-left: 10%; /* Applica il margine sinistro del 10% */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 100vh;
-    width: 100vw;
-    background-color: var(--background-color);
-    box-sizing: border-box;
-    position: relative;
-    overflow: hidden;
-    z-index: 2;
+    align-items: flex-start;
   }
-  
-  .home-text {
-    position: absolute;
-    top: 400px;
-    right: 80px;
-    text-align: right;
-  }
-  
-  .home-text p {
-    font-weight: 100;
-    font-size: 2rem;
-    color: var(--primary-text-color);
-    max-width: 40vw;
-  }
-  
-  .tagline {
-    font-weight: 400;
-    color: var(--foreground-color);
-  }
-  
-  .bottom-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 80px;
-  }
-  
+
   .home-logo-container {
-    flex: 1;
+    margin: 0;
+    padding: 0;
+    width: 100%;
     display: flex;
     justify-content: flex-start;
   }
-  
-  .home-logo-container .home-logo {
+
+  .home-logo {
+    max-width: 80%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .scroll-hint {
     display: none;
   }
-  
-  /* Mostra il logo chiaro in modalità light */
-  body[data-theme='light'] .home-logo-container .home-logo.light-logo {
-    display: block;
+}
+
+/* Specifico per Safari */
+@supports (-webkit-touch-callout: none) and (not (min-resolution: 0.001dpcm)) {
+  .home-logo.safari-fix {
+    margin-left: -5vw !important;
   }
-  
-  /* Mostra il logo scuro in modalità dark */
-  body[data-theme='dark'] .home-logo-container .home-logo.dark-logo {
-    display: block;
-  }
-  
-  .home-logo {
-    max-width: 50vw;
-    max-height: 30vh;
-    margin-left: 80px;
-  }
-  
-  .scroll-hint {
-    font-size: 1.2rem;
-    color: var(--primary-text-color);
-    font-weight: 100;
-    letter-spacing: 0.1em;
-    white-space: nowrap;
-    transform: rotate(-90deg);
-    pointer-events: none;
-    position: relative;
-    bottom: 88px;
-    right: -8px;
-  }
-  
-  .scroll-arrow {
-    display: inline-block;
-    font-weight: 900;
-    color: var(--foreground-color);
-    margin-left: 10px;
-    font-size: 1.5rem;
-    animation: scrollArrowAnimation 1.5s infinite ease-in-out;
-  }
-  
-  @keyframes scrollArrowAnimation {
-    0%,
-    100% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(10px);
-    }
-  }
-  
-  .stripes-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 55%;
-    height: 100%;
-    display: flex;
-    pointer-events: none;
-    justify-content: flex-end;
-    z-index: 1000;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-  }
-  
-  .stripe {
-    flex: 1;
-    height: 100%;
-    background-color: rgb(238, 238, 238);
-    transform: scaleX(0);
-    margin-left: -2px;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .home-text p {
-      font-size: 1.2em;
-      line-height: 1.1;
-      text-align: left !important;
-      max-width: 100vw !important;
-    }
-  
-    .home-text {
-      top: 200px;
-      left: 10%;
-    }
-  
-    .bottom-section {
-      position: absolute;
-      bottom: 15vh;
-      left: 10%;
-      width: 80%; /* Aggiunto */
-      display: flex;
-      flex-direction: column; /* Aggiunto */
-      align-items: flex-start; /* Aggiunto */
-    }
-  
-    .home-logo-container {
-      margin: 0; /* Aggiunto */
-      padding: 0; /* Aggiunto */
-      width: 100%; /* Aggiunto */
-      display: flex; /* Assicura che sia un elemento flex */
-      justify-content: flex-start; /* Allinea il logo a sinistra */
-    }
-  
-    .home-logo {
-      max-width: 100%;
-      margin-left: 0;
-    }
-  
-    .scroll-hint {
-      display: none;
-    }
-  }
-  
-  /* Specifico per Safari */
-  @supports (-webkit-touch-callout: none) and (not (min-resolution: 0.001dpcm)) {
-    .home-logo.safari-fix {
-      margin-left: -5vw !important;
-    }
-  }
-  
+}
